# scp-game-framework

./: .gitignore  CMakeLists.txt  README.md
Project/: CMakeLists.txt
Project/include/scp/: dummy-header.hpp
Project/src/: dummy-source.cpp
Sources/: CMakeLists.txt
Sources/include/scp/: macros.hpp
Sources/src/: CMakeLists.txt
include/scp/: dummy.hpp  macros.hpp  window.hpp
src/: CMakeLists.txt  dummy.cpp  window.cpp
tests/: CMakeLists.txt  dummy.cpp  window.cpp
